# Football_Statistic_Analysis

./: Dockerfile  README.md  analysis.ipynb  fetch_api_data.py  main.py  process_data.py  pyproject.toml  requirements.txt  streamlit_app.py
.ipynb_checkpoints/: analysis-checkpoint.ipynb
data/: database.sqlite
env/: pyvenv.cfg
streamlit_app/: streamlit_app.py
