[tool.poetry]
name = "football-statistic-analysis"
version = "0.1.0"
description = ""
authors = ["Ayoub Azmi <azmiayoub50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
mplsoccer = "^1.2.2"
ipykernel = "^6.29.3"
streamlit = "^1.31.1"
plotly = "^5.19.0"
highlight-text = "^0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
